--- a/frames.tex
+++ b/frames.tex
@@ -15,21 +15,11 @@
 %==============================================
 \begin{frame}{\insertsectionhead}
   \framesubtitle{General context of the project}
-%   \textbf{\textsc{The goal}}\xspace Application for monitoring contracts for the delegated management of urban bus transport
-%   \href{https://github.com/matze/mtheme}{\textsc{metropolis} theme} from Matthias
-%   Vogelgesang.
-%   \vfill
-%   \themename comes with lots of nice extra features
-%   \begin{itemize}
-%     \item Multiple style variations for title, section and normal slides
-%     \item Simple customization of theme colors
-%     \item Lots of convenient options to tweak the design
-%   \end{itemize}
 \textbf{\textsc{The goal:}}\xspace Application for monitoring contracts for the delegated management of urban bus transport
 \begin{figure}[ht!]
   \hspace{\fill}
   \begin{subfigure}[b]{0.3\textwidth}
-    \frame{\includegraphics[width=\textwidth]{screenshots/mainicon.png}}
+    \frame{\includegraphics[width=\textwidth]{images/mainicon.png}}
     \caption*{Application Logo}
   \end{subfigure}
   \hspace{\fill}
@@ -37,7 +27,7 @@
 \end{frame}
 
 %--------------------------------------
-\subsection{UIR}
+\subsection{Host organization}
 \begin{frame}
   \frametitle{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
@@ -45,7 +35,7 @@
   \begin{columns}[T,onlytextwidth]
     \column{0.55\textwidth}
     \begin{figure}
-      \includegraphics[width=0.6\textwidth]{screenshots/logo-uir2.jpg}
+      \includegraphics[width=0.6\textwidth]{images/logo-uir2.jpg}
     \end{figure}
     \column{0.45\textwidth}
     What is \textbf{\textsc{UIR?}}
@@ -67,12 +57,12 @@
     \column{0.28\textwidth}
     Technical consulting partner
     \begin{figure}
-      \includegraphics[width=0.6\textwidth]{screenshots/dynit.png}
+      \includegraphics[width=0.6\textwidth]{images/dynit.png}
     \end{figure}
     \column{0.30\textwidth}
     Client: \textbf{\textsc{DGCT}}
     \begin{figure}
-      \includegraphics[width=0.8\textwidth]{screenshots/logo-fr.png}
+      \includegraphics[width=0.8\textwidth]{images/logo-fr.png}
     \end{figure}
     \column{0.42\textwidth}
     Its Roles
@@ -88,259 +78,159 @@
 
 %--------------------------------------
 
-\subsection{Problematic}
+\subsection{Problematic and Goals}
 \begin{frame}{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  How can we improve monitoring and 
+  \textbf{\textsc{How can we improve monitoring and 
   processing of delegated transport management contracts
-  urban by bus?
+  urban by bus?}}
+\begin{itemize}
+  \item Centralize the information contained in management contracts
+  delegate and their amendments, if applicable;
+  \item Centralize the documents required by the contract that the operator is
+  required to provide periodically to the delegating authority;
+  \item Allow users to share information internally
+  and documents;
+  \item Monitor the management of urban transport contracts.
+\end{itemize}
 \end{frame}
 %==============================================
-\section{Layout}
+\section{Project Management}
 %==============================================
 
-% \subsection{Layout variations}
+\subsection{Project Actors}
 
-% \begin{frame}[fragile=singleslide]{\insertsectionhead}
-%   \framesubtitle{\insertsubsectionhead}
-%   The general style for the title, section and regular frames can be changed
-%   easily with simple options. Here are some examples for the title page
-%   \begin{figure}[ht!]
-%     \begin{subfigure}[b]{0.3\textwidth}
-%       \frame{\includegraphics[width=\textwidth]{screenshots/layout_example-03.jpg}}
-%       \caption*{plain}
-%     \end{subfigure}
-%     \hspace{\fill}
-%     \begin{subfigure}[b]{0.3\textwidth}
-%       \frame{\includegraphics[width=\textwidth]{screenshots/layout_example-02.jpg}}
-%       \caption*{style1}
-%     \end{subfigure}
-%     \hspace{\fill}
-%     \begin{subfigure}[b]{0.3\textwidth}
-%       \frame{\includegraphics[width=\textwidth]{screenshots/layout_example-01.jpg}}
-%       \caption*{style2 (default)}
-%     \end{subfigure}
-%   \end{figure}
-% \end{frame}
-
-%--------------------------------------
-\subsection{Fonts}
-
-\begin{frame}
-  \frametitle{\insertsectionhead}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  This theme is using \textit{Source Sans Pro} font for all elements by default.
-  This can be disabled by providing the option \texttt{usesourcefonts=false}.
-  \vfill
-  Emphasis can be added by using \textbf{bold} typeface, \textit{italic},
-  \alert{alert} or {\color{tPrim}{simple colors}}.
-  \vfill
-  Equations are typsetted with this font as well
-  \begin{equation*}
-    F(x|\mu,s) = \int_{-\infty}^x s^{-1}\left(1+e^{-\frac{v-\mu}{s}}\right)^{-2} e^{-\frac{v-\mu}{s}}\;\mathsf{d}v = \frac{1}{1+e^{-\frac{x-\mu}{s}}}
-  \end{equation*}
-\end{frame}
-
-
-%==============================================
-\section{Elements}
-%==============================================
-\subsection{Charts}
-\begin{frame}{\insertsectionhead}
-  \framesubtitle{\insertsubsectionhead}
-  \begin{columns}[c, onlytextwidth]
-    \column{0.47\textwidth}
-    Use the theme color \texttt{tPrim}, \texttt{tSec}, \texttt{tGrey} and
-    \texttt{tAccent} to have charts directly fit the main theme of presentation.
-    \vfill
-    \begin{itemize}
-      \item Easy variants using \texttt{color!x} to lighten or darken the colors
-    \end{itemize}
-    \hfill
-    \column{0.47\textwidth}
-    \center
-    \resizebox{0.9\textwidth}{!}{%
-      \begin{tikzpicture}
-        \pie[color={tPrim, tPrim!75, tPrim!50, tPrim!25},
-        rotate=90, hide number, text= legend]
-        {50/tPrim, 32/tPrim!75, 16/tPrim!50, 2/tPrim!25}
-      \end{tikzpicture}
-    }
-  \end{columns}
-\end{frame}
-
-\subsection{Lists}
-\begin{frame}{\insertsectionhead}
-  \framesubtitle{\insertsubsectionhead}
-  \begin{columns}[T,onlytextwidth]
-    \column{0.28\textwidth}
-    Items
-    \begin{itemize}
-      \item Item 1
-        \begin{itemize}
-          \item Subitem 1
-          \item Subitem 2
-        \end{itemize}
-      \item Item 2
-      \item Item 3
-    \end{itemize}
-
-    \column{0.42\textwidth}
-    Enumerations
-    \begin{enumerate}
-      \item The Fellowship of the Ring,
-      \item The Two Towers,
-      \item The Return of the King.
-    \end{enumerate}
-
-    \column{0.30\textwidth}
-    Descriptions
-    \begin{description}
-      \item[Trigon] Modern. \item[Default] Outdated.
-    \end{description}
-  \end{columns}
-\end{frame}
-
-%--------------------------------------
-\subsection{Figures}
-\begin{frame}
-  \frametitle{\insertsectionhead}
-  \framesubtitle{\insertsubsectionhead}
-
-  \begin{figure}
-    \newcounter{density}
-    \setcounter{density}{20}
-    \begin{tikzpicture}
-      \def\couleur{tAccent}
-      \def\color{tSec}
-      \path[coordinate] (0,0)  coordinate(A)
-        ++( 60:5cm) coordinate(B)
-        ++(-60:5cm) coordinate(C);
-      \path[coordinate] (0,0)  coordinate(D)
-        ++(60:5cm) coordinate(E)
-        ++(180:5cm) coordinate(F);
-      \draw[fill=\couleur!\thedensity] (A) -- (B) -- (C) -- cycle;
-      \draw[fill=\color!\thedensity] (D) -- (E) -- (F) -- cycle;
-      \foreach \x in {1,...,15}{%
-        \pgfmathsetcounter{density}{\thedensity+10}
-        \setcounter{density}{\thedensity}
-        \path[coordinate] coordinate(X) at (A){};
-        \path[coordinate] (A) -- (B) coordinate[pos=.15](A)
-          -- (C) coordinate[pos=.15](B)
-          -- (X) coordinate[pos=.15](C);
-        \draw[fill=\couleur!\thedensity] (A)--(B)--(C)--cycle;
-      }
-      \setcounter{density}{20}
-      \foreach \x in {1,...,15}{%
-        \pgfmathsetcounter{density}{\thedensity+10}
-        \setcounter{density}{\thedensity}
-        \path[coordinate] coordinate(X) at (D){};
-        \path[coordinate] (D) -- (E) coordinate[pos=.15](D)
-          -- (F) coordinate[pos=.15](E)
-          -- (X) coordinate[pos=.15](F);
-        \draw[fill=\color!\thedensity] (D)--(E)--(F)--cycle;
-      }
-    \end{tikzpicture}
-    \caption{Rotated triangles from
-    \href{http://www.texample.net/tikz/examples/rotated-triangle/}{texample.net}.}
+  The general style for the title, section and regular frames can be changed
+  easily with simple options. Here are some examples for the title page
+  \begin{figure}[ht!]
+    \begin{subfigure}[b]{0.3\textwidth}
+      \frame{\includegraphics[scale=0.4]{images/usertie.png}}
+      \caption*{Product Owner: Mrs. Mr.Labiz Brahim}
+    \end{subfigure}
+    \hspace{\fill}
+    \begin{subfigure}[b]{0.3\textwidth}
+      \frame{\includegraphics[scale=0.4]{images/usertie.png}}
+      \caption*{SCRUM Master: Mrs.Talhaoui Insaf}
+    \end{subfigure}
+    \hspace{\fill}
+    \begin{subfigure}[b]{0.3\textwidth}
+      \frame{\includegraphics[scale=0.4]{images/usertie.png}}
+      \caption*{Developer: Mr. Kotbi Abderrahmane}
+    \end{subfigure}
   \end{figure}
 \end{frame}
 
 %--------------------------------------
-\subsection{Tables}
-\begin{frame}
-  \frametitle{\insertsectionhead}
+\subsection{Working Steps}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  \begin{table}[H]
-    \centering
-    \caption{A nice table example}
-    \begin{tabular}{@{} lccc @{}}
-      \toprule
-      & \textbf{Velocity} & \textbf{Angle}  & \textbf{Vertical force} \\
-      & $U$ & $\alpha$  & $F_z$ \\
-      & [m/s] & [$^\circ$]  & [N] \\
-      \midrule
-      2D simulation  & 9 & 2 & 9.23 \\
-      3D simulation  & 10.0 & 3 & 15.039 \\
-      Experiment A   & 11.31 & 2.5 & 13.2 \\
-      Experiment B   & 11.26 & 2.7 & 12.6 \\
-      Experiment C   & 11.33 & 2.47 & 13.6 \\
-      \bottomrule
-    \end{tabular}
-  \end{table}
+  \begin{figure}[b]
+    \frame{\includegraphics[scale=0.2]{images/trello.png}}
+  \end{figure}
+\end{frame}
 
+%==============================================
+\section{Functional Analysis and Conceptual Study}
+%==============================================
+\subsection{Functional Analysis}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[scale=0.21]{images/WBS KPI.png}}
+  \end{figure}
 \end{frame}
 
 %--------------------------------------
-\subsection{Blocks}
+
+\subsection{Solution}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=\textwidth]{images/descrip-projet.png}}
+  \end{figure}
+\end{frame}
+
+%--------------------------------------
+
+\subsection{Conceptual study}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  Conception
+  \begin{itemize}
+    \item[•] \textbf{Diagrammes réalisés:} \href{https://viewer.diagrams.net/?tags=&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Diagram.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Fabdorah%2Fstage2021%2Fmaster%2Fdiagramms%2FDiagram.drawio}{\textit{Page Draw.io}}
+		\item[•] \textbf{Maquettes du projet:} \href{https://whimsical.com/kdi-ux-design-J9PD866564ibwyMBwLHN9N}{\textit{Page Whimsical}}
+  \end{itemize}
+\end{frame}
+
+%==============================================
+\section{Implementation}
+%==============================================
+
+\subsection{Welcome Page}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=0.9\textwidth]{images/acceuil.jpg}}
+  \end{figure}
+\end{frame}
+
+%--------------------------------------
+
+\subsection{Listing Page Example}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=0.9\textwidth]{images/aff delegant.jpg}}
+  \end{figure}
+\end{frame}
+
+%--------------------------------------
+
+\subsection{Display Page Example}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=0.8\textwidth]{images/affAv.png}}
+  \end{figure}
+\end{frame}
+
+%--------------------------------------
+
+\subsection{Add Page Example}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=0.9\textwidth]{images/Nv avancement invest realise.jpg}}
+  \end{figure}
+\end{frame}
+
+%--------------------------------------
+
+\subsection{Update Page Example}
+\begin{frame}[fragile=singleslide]{\insertsectionhead}
+  \framesubtitle{\insertsubsectionhead}
+  \begin{figure}[b]
+    \frame{\includegraphics[width=0.9\textwidth]{images/mise a jour materiel fixe.jpg}}
+  \end{figure}
+\end{frame}
+
+%==============================================
+\section{Conclusion and Prescriptives}
+%==============================================
+
+\subsection{Summary}
 \begin{frame}
   \frametitle{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  \begin{block}{Regular block}
-    Just a regular block
-  \end{block}
-  \begin{alertblock}{Alert block}
-    Some important thing
+  \begin{exampleblock}{Achieved}
+    Data saving and presentation
+  \end{exampleblock}
+  \begin{alertblock}{Prescriptives}
+    Reports presentation and generation in Power BI
   \end{alertblock}
   \begin{exampleblock}{Example block}
     No difference with regular block to avoid excessive distraction
   \end{exampleblock}
-\end{frame}
-
-%--------------------------------------
-\subsection{Frame footer}
-{
-\setbeamertemplate{frame footer}{My custom footer}
-\begin{frame}[fragile]
-  \frametitle{\insertsectionhead}
-  \framesubtitle{\insertsubsectionhead}
-    \themename defines a custom beamer template to add a text to the footer. It can be set via
-    \begin{verbatim}\setbeamertemplate{frame footer}{My custom footer}\end{verbatim}
-\end{frame}
-}
-
-\begin{frame}{References}
-  Some references to showcase [allowframebreaks] \cite{knuth92,ConcreteMath,Simpson,Er01,greenwade93}
-\end{frame}
-
-%==============================================
-\section{Conclusion}
-%==============================================
-\begin{frame}{Summary}
-
-  Get the source of this theme and the demo presentation from
-
-  \begin{center}\url{gitlab.com/thlamb/beamertheme-trigon}\end{center}
-
-  As for \textsc{metropolis}, \themename is licensed under a
-  \href{http://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons
-  Attribution-ShareAlike 4.0 International License}.
-
-  \begin{center}\ccbysa\end{center}
-
-\end{frame}
-
-%==============================================
-%\begin{frame}[standout]
-%  Questions?
-%\end{frame}
-
-\appendix
-
-\begin{frame}[fragile]{Backup slides}
-  Sometimes, it is useful to add slides at the end of your presentation to
-  refer to during audience questions.
-
-  The best way to do this is to include the \verb|appendixnumberbeamer|
-  package in your preamble and call \verb|\appendix| before your backup slides.
-
-  \themename will automatically turn off slide numbering and progress bars for
-  slides in the appendix.
-\end{frame}
-
-\begin{frame}[allowframebreaks]{References}
-
-  \bibliography{demo}
-  \bibliographystyle{abbrv}
-
 \end{frame}
