--- a/frames.tex
+++ b/frames.tex
@@ -157,10 +157,9 @@
 \subsection{Conceptual study}
 \begin{frame}[fragile=singleslide]{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  Conception
   \begin{itemize}
-    \item[•] \textbf{Diagrammes réalisés:} \href{https://viewer.diagrams.net/?tags=&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Diagram.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Fabdorah%2Fstage2021%2Fmaster%2Fdiagramms%2FDiagram.drawio}{\textit{Page Draw.io}}
-		\item[•] \textbf{Maquettes du projet:} \href{https://whimsical.com/kdi-ux-design-J9PD866564ibwyMBwLHN9N}{\textit{Page Whimsical}}
+    \item[•] \textbf{Diagrams produced:} \href{https://viewer.diagrams.net/?tags=&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Diagram.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Fabdorah%2Fstage2021%2Fmaster%2Fdiagramms%2FDiagram.drawio}{\textit{draw.io page}}
+		\item[•] \textbf{Project models:} \href{https://whimsical.com/kdi-ux-design-J9PD866564ibwyMBwLHN9N}{\textit{whimsical page}}
   \end{itemize}
 \end{frame}
 
