fix: shorten the titles and get ride of mistakes

--- a/frames.tex
+++ b/frames.tex
@@ -81,9 +81,7 @@
 \subsection{Problematic and Goals}
 \begin{frame}{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  \textbf{\textsc{How can we improve monitoring and
-  processing of delegated transport management contracts
-  urban by bus?}}
+  \textbf{\textsc{Improvement?}}
 \begin{itemize}
   \item Centralize the information contained in management contracts
   delegate and their amendments, if applicable;
@@ -102,8 +100,6 @@
 
 \begin{frame}[fragile=singleslide]{\insertsectionhead}
   \framesubtitle{\insertsubsectionhead}
-  The general style for the title, section and regular frames can be changed
-  easily with simple options. Here are some examples for the title page
   \begin{figure}[ht!]
     \begin{subfigure}[b]{0.3\textwidth}
       \frame{\includegraphics[scale=0.4]{images/usertie.png}}
