--- a/frames.tex
+++ b/frames.tex
@@ -212,7 +212,7 @@
 \end{frame}
 
 %==============================================
-\section{Conclusion and Prescriptives}
+\section{Conclusion and Perspectives}
 %==============================================
 
 \subsection{Summary}
@@ -222,7 +222,7 @@
   \begin{exampleblock}{Achieved}
     Data saving and presentation
   \end{exampleblock}
-  \begin{alertblock}{Prescriptives}
+  \begin{alertblock}{Perspectives}
     Reports presentation and generation in Power BI
   \end{alertblock}
 \end{frame}
