--- a/frames.tex
+++ b/frames.tex
@@ -103,7 +103,7 @@
   \begin{figure}[ht!]
     \begin{subfigure}[b]{0.3\textwidth}
       \frame{\includegraphics[scale=0.4]{images/usertie.png}}
-      \caption*{Product Owner: Mrs. Mr.Labiz Brahim}
+      \caption*{Product Owner: Mr.Labiz Brahim}
     \end{subfigure}
     \hspace{\fill}
     \begin{subfigure}[b]{0.3\textwidth}
